[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "tul_routing"
version = "0.0.1"
authors = [
    { name = "Jan Hybš", email = "jan.hybs@tul.cz" },
    { name = "Radek Srb", email = "radek.srb@tul.cz" },
    { name = "Jiří Vraný", email = "jiri.vrany@tul.cz" },
]
